--- a/src/Chat.fxml
+++ b/src/Chat.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ChatController">
    <children>
-      <Button layoutX="250.0" layoutY="187.0" mnemonicParsing="false" onAction="#makeRectangle" text="Make rectangle" />
+      <ScrollPane layoutX="1.0" layoutY="-1.0" prefHeight="310.0" prefWidth="600.0" />
+    <AnchorPane layoutY="-1.0" minHeight="0.0" minWidth="0.0" prefHeight="310.0" prefWidth="600.0" />
+      <TextArea fx:id="messageBox" layoutX="-1.0" layoutY="309.0" prefHeight="90.0" prefWidth="498.0" />
+      <Button fx:id="sendButton" layoutX="498.0" layoutY="310.0" mnemonicParsing="false" onAction="#sendMessage" prefHeight="90.0" prefWidth="102.0" text="Button" />
    </children>
 </AnchorPane>
